--- a/youtube-date-extension/youtube-upload-date-extension/manifest.json
+++ b/youtube-date-extension/youtube-upload-date-extension/manifest.json
@@ -42,27 +42,27 @@
     "default_popup": "src/popup/popup.html",
     "default_title": "YouTube Upload Date Settings",
     "default_icon": {
-      "16": "assets/icons/icon16.png",
-      "32": "assets/icons/icon32.png",
-      "48": "assets/icons/icon48.png",
-      "128": "assets/icons/icon128.png"
+      "16": "assets/icons/icon16.webp",
+      "32": "assets/icons/icon32.webp",
+      "48": "assets/icons/icon48.webp",
+      "128": "assets/icons/icon128.webp"
     }
   },
   
   "options_page": "src/options/options.html",
   
   "icons": {
-    "16": "assets/icons/icon16.png",
-    "32": "assets/icons/icon32.png", 
-    "48": "assets/icons/icon48.png",
-    "128": "assets/icons/icon128.png"
+    "16": "assets/icons/icon16.webp",
+    "32": "assets/icons/icon32.webp", 
+    "48": "assets/icons/icon48.webp",
+    "128": "assets/icons/icon128.webp"
   },
   
   "web_accessible_resources": [
     {
       "resources": [
         "assets/css/overlay.css",
-        "assets/icons/*.png"
+        "assets/icons/*.webp"
       ],
       "matches": [
         "*://*.youtube.com/*",
